<resources>
    <string name="app_name"> Yu-Gi-Oh touchTarget </string>
    <string name="play"> Jouer </string>
    <string name="score"> Score </string>
    <string name="put_name"> Quel est ton nom duelliste ? </string>
    <string name="save"> Sauvegarder </string>
    <string name="cancel"> Annuler </string>
    <string name="replay"> Je dois devenir encore plus fort ... </string>
    <string name="congrat"> Felicitations </string>
    <string name="game_over"> Game Over ! </string>
    <string name="pb_user_name"> Votre pseudo doit être composé de 1 à 20 caractères. </string>
    <string name="saving"> Vous etes sur le point de sauvegarder votre score. \nConfirmer ? </string>
    <string name="text_over"> Exodia vous a explose ... </string>
    <string name="difficulty"> Selectionnez la difficulte </string>
    <string name="back_menu"> Menu </string>
</resources>
