<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLayoutCongrat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tumblr"
    tools:context=".CongratulationActivity">

    <Button
        android:id="@+id/button_replay"
        android:layout_width="187dp"
        android:layout_height="79dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_menu"
        android:fontFamily="@font/xenosphere"
        android:textSize="15sp"
        android:text="@string/replay"
        android:onClick="startNewGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="187dp"
        android:layout_height="79dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_menu"
        android:fontFamily="@font/xenosphere"
        android:textSize="18sp"
        android:text="@string/save"
        android:onClick="saveGame"
        app:layout_constraintBottom_toTopOf="@+id/button_replay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_result" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="366dp"
        android:layout_height="69dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="29dp"
        android:fontFamily="@font/xenosphere"
        android:gravity="center"
        android:text="@string/congrat"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="350dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/xenosphere"
        android:textColor="#0892d0"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/score_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/score_result"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/xenosphere"
        android:gravity="center"
        android:textColor="#FAFAD2"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

<!--    <pl.droidsonroids.gif.GifImageView-->
<!--        android:id="@+id/gifbackground"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@drawable/tumblr"-->
<!--        android:-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>