<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmenu"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/xenosphere"
        android:gravity="center"
        android:text="@string/difficulty"
        android:textColor="#FAFAD2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/input_text_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        tools:layout_editor_absoluteX="0dp" />

    <RatingBar
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:isIndicator="false"
        android:numStars="3"
        android:rating="1"
        android:stepSize="1"
        android:backgroundTint="#FF0000"
        android:foregroundTint="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/input_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/yugi_face"
        android:layout_width="82dp"
        android:layout_height="58dp"
        android:foregroundGravity="center"
        android:background="@drawable/yugimutohappy"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text_name" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="178dp"
        android:layout_height="98dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="50dp"
        android:onClick="launch"
        android:fontFamily="@font/xenosphere"
        android:background="@drawable/button_menu"
        android:textSize="25sp"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/button_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text_name" />

    <Button
        android:id="@+id/button_score"
        android:layout_width="191dp"
        android:layout_height="90dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="118dp"
        android:onClick="see_result"
        android:background="@drawable/button_menu"
        android:fontFamily="@font/xenosphere"
        android:textSize="25sp"
        android:text="@string/score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play" />

    <EditText
        android:id="@+id/input_text_name"
        android:layout_width="355dp"
        android:layout_height="93dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="122dp"
        android:fontFamily="@font/xenosphere"
        android:autofillHints=""
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <Button
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:background="#00000000"
        android:onClick="dudududuel" />

</androidx.constraintlayout.widget.ConstraintLayout>